Model and collection api exposure made more flexible and framework for server-side validation/whitelisting put in place.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "bones",
     "express"
   ],
-  "author": "Conor McLaughlin",
+  "author": "conoremclaughlin",
   "license": "BSD",
   "dependencies": {
     "yaml-front-matter": "1.x.x",
-    "backbone-forms": "0.10.x"
+    "backbone-forms": "0.10.x",
+    "express-validator": "0.3.x"
   }
 }
