--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test playground for cool bones setups and features.",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha -R ./test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "express-validator": "0.3.x"
   },
   "devDependencies": {
-    "bones-test": "0.0.x"
+    "bones-test": "0.0.x",
+    "debug": "0.x.x"
   }
 }
