--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bones-boiler",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Test playground for cool bones setups and features.",
   "main": "index.js",
   "scripts": {
@@ -17,14 +17,19 @@
   "author": "conoremclaughlin",
   "license": "BSD",
   "dependencies": {
-    "async": "0.1.x",
+    "async": "~0.1.22",
     "bones": "~2.4.0",
-    "yaml-front-matter": "1.x.x",
-    "backbone-forms": "0.10.x",
-    "express-validator": "0.3.x"
+    "yaml-front-matter": "~1.0.2",
+    "express-validator": "~0.3.0",
+    "backbone": "0.9.2",
+    "backbone-forms": "~0.10.0",
+    "backbone.marionette": "git://github.com/marionettejs/backbone.marionette.git#7969b7e8929cf5c73539a75e48dbe5a36923b107",
+    "debug": "*"
   },
   "devDependencies": {
-    "bones-test": "git://github.com/marionettejs/backbone.marionette.git",
-    "debug": "0.x.x"
+    "mocha": "~1.6.0",
+    "bones-test": "git://github.com/conoremclaughlin/bones-test.git#fd152d84a187a593d802dccee2763d3af8a13b22",
+    "should": "~1.2.0",
+    "request": "~2.9.203"
   }
 }
