--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   "license": "BSD",
   "dependencies": {
     "async": "~0.1.22",
-    "bones": "~2.4.0",
     "yaml-front-matter": "~1.0.2",
-    "express-validator": "~0.3.0",
+    
+    "jquery": "~1.7.3",
+    "underscore": "~1.3.3",
+    
     "backbone": "0.9.2",
     "backbone-forms": "~0.10.0",
     "backbone.marionette": "git://github.com/marionettejs/backbone.marionette.git#7969b7e8929cf5c73539a75e48dbe5a36923b107",
+    
+    "express-validator": "~0.3.0",
+    
     "debug": "*"
   },
   "devDependencies": {
