--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "~0.1.22",
     "yaml-front-matter": "~1.0.2",
+    "bones": "~2.4.0",
     
     "jquery": "~1.7.3",
     "underscore": "~1.3.3",
