--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bones-boiler",
   "version": "0.0.1",
-  "description": "Test playground for cool bones setups and features.",
+  "description": "Test playground bones features and setups!",
   "main": "index.js",
   "scripts": {
     "test": "mocha ./test"
@@ -23,11 +23,13 @@
     
     "jquery": "~1.7.3",
     "underscore": "~1.3.3",
+    "mirror": "~0.3.3",
     
     "backbone": "0.9.2",
     "backbone-forms": "~0.10.0",
     "backbone.marionette": "git://github.com/marionettejs/backbone.marionette.git#7969b7e8929cf5c73539a75e48dbe5a36923b107",
     
+    "mongoose": "~3.2.2",
     "express-validator": "~0.3.0",
     
     "debug": "*"
